[package]
name = "evelyn"
version = "0.1.0"
license = "MIT"
license-file = "LICENSE"
description = "Simple event distribution library"
keywords = ["events", "message", "bus"]
repository = "https://github.com/JohnDowson/Evelyn"
categories = ["concurrency"]
authors = ["Ivan Chinenov <ichinenov@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
